# pseudo

./: .travis.yml  Cargo.toml  README.md
examples/: send.rs  simple.rs  uncloneable.rs
src/: lib.rs  mock.rs
